feat(api): add API versioning through the location prefix
